[package]
authors = ["Daniel Fujii <danifujii@gmail.com>"]
edition = "2018"
name = "witter-backend"
version = "0.1.0"

[dependencies]
tide = "0.8.1"
async-std = {version = "1.5.0", features = ["attributes", "unstable"]}
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
sqlx = {version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"]}
chrono = "0.4.11"
log = "0.4.8"
serde = {version = "1.0.106", features = ["derive"]}
uuid = "0.8.1"
thiserror = "1.0.16"
serde_json = "1.0.52"
